<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhh.rent.activity.RentActivity">

    <TableRow android:padding="10dp">

        <ImageButton
            android:id="@+id/back"
            android:padding="10dp"
            android:src="@mipmap/back_128"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@color/transparent"/>

        <TextView
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/record_title"/>

        <ImageButton
            android:id="@+id/delete"
            android:padding="10dp"
            android:src="@mipmap/delete_128"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@color/transparent"/>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/record_start_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:text="@string/start_time"
            android:textColor="@color/bg_font_black"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/start_to_end"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/BLUE"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/record_end_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:text="@string/end_time"
            android:textColor="@color/bg_font_black"
            android:textSize="20sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rent_month"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_gravity="center" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/record_month_rent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:padding="10dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rent_water"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_gravity="center" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/record_water"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:padding="10dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rent_electric"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_gravity="center" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/record_electric"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:padding="10dp"/>
    </TableRow>



    <TableRow>
        <TextView
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rent_days"
            android:textColor="@color/black"
            android:padding="10dp"/>

        <TextView
            android:textSize="20sp"
            android:id="@+id/record_days"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:padding="10dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rent_result"
            android:textColor="@color/black"
            android:padding="10dp"/>

        <TextView
            android:textSize="20sp"
            android:id="@+id/record_result"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:padding="10dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rent_time"
            android:textColor="@color/black"
            android:padding="10dp"/>

        <TextView
            android:textSize="20sp"
            android:id="@+id/record_time"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:padding="10dp"/>
    </TableRow>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/rent_example"
        android:padding="10dp"/>

</TableLayout>
